Devise-Views anpassen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -225,3 +225,6 @@
 
   [type=radio]:checked + label
     outline: 0.2rem solid $primary
+
+.form-check-input
+  --bs-border-color: #{darken($border-color, 10%)}
