--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,12 +1,11 @@
-= render 'devise/header'
-
-= page_title 'Erstellen eines neuen Benutzerkontos'
+= render 'devise/header', active: :register
 
 .row
   .col-md-8
     = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      .card
-        .card-body
+      = card do |card|
+        = card.title 'Registrieren'
+        = card.body do
           = f.error_notification
 
           .form-inputs
@@ -14,7 +13,5 @@
             = f.input :email, input_html: { autocomplete: 'email' }
             = f.input :password, required: true, input_html: { autocomplete: 'new-password' }
             = f.input :password_confirmation, required: true, input_html: { autocomplete: 'new-password' }
-          .btn-toolbar.mt-3
-            = f.button :submit, class: 'btn btn-primary'
-  .col-md-4
-    = render 'devise/shared/links'
+        = card.footer do
+          = f.button :submit, class: 'btn btn-primary'
