Bilder im Markdown mittig ausrichten

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -210,6 +210,9 @@
         font-size: 0.9rem
     th
       text-align: center
+  img
+    max-width: 100%
+    height: auto
 
 .assessment-request
   border: 1px solid $light
