Startlisten automatisch über Websockets aktualisieren
refs #45

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -231,6 +231,14 @@
 .next-run
   border-bottom: 2px solid black
 
+
+tr.highlight-updated-run td, tr.highlight-updated-run th
+  background-color: #b2ffb2
+
+tr.highlight-updated-run-fade-out td, tr.highlight-updated-run-fade-out th
+  background-color: white
+  transition: background-color 10s ease-out
+
 .suggestions-entries
   overflow: auto
   height: 200px
