--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-person/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-person/view.html
@@ -140,7 +140,7 @@ Erweitert
 <h4 class='m-0 py-2 ps-3'>Hakenleitersteigen - Frauen - Lauf 1</h4>
 </div>
 </div>
-<table class='table much-data'>
+<table class='table much-data score-list-channel' data-score-list-editable='1' data-score-list-id='UUID'>
 <thead>
 <tr class='small'>
 <th>
@@ -176,6 +176,7 @@ Erweitert
 </td>
 
 </tr>
+
 <tr class='next-run' data-id='UUID'>
 <td class='run'>
 </td>
@@ -192,6 +193,7 @@ Erweitert
 </td>
 
 </tr>
+
 <tr class='' data-id='UUID'>
 <td class='run'>
 <a id='jump-run-3'></a>
@@ -211,6 +213,7 @@ Erweitert
 </td>
 
 </tr>
+
 <tr class='next-run'>
 <td class='run'>
 </td>
@@ -227,6 +230,7 @@ Erweitert
 </td>
 
 </tr>
+
 </tbody>
 </table>
 
