--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-team-with-destroy/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-team-with-destroy/view.html
@@ -140,7 +140,7 @@ Erweitert
 <h4 class='m-0 py-2 ps-3'>Löschangriff Nass - Frauen - Lauf 1</h4>
 </div>
 </div>
-<table class='table much-data'>
+<table class='table much-data score-list-channel' data-score-list-editable='1' data-score-list-id='UUID'>
 <thead>
 <tr class='small'>
 <th>
@@ -172,6 +172,7 @@ Frauen-Team
 </td>
 
 </tr>
+
 <tr class='next-run'>
 <td class='run'>
 </td>
@@ -186,6 +187,7 @@ Frauen-Team
 </td>
 
 </tr>
+
 </tbody>
 </table>
 
