--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -313,5 +313,5 @@ span.best-badge, span.team-badge
 .separate-times
   font-size: 80%
 
-tr.best-time-of-rund td, tr.best-time-of-rund th
+tr.best-time-of-run td, tr.best-time-of-run th
   background-color: #d9ffe1
