Registrierungs-E-Mails für Nutzer abschaltbar machen

--- a/spec/fixtures/views/Competitions_AccessesController_when_toggle_mail_info_toggles_registration_mail_info-index-without-mailinfo/view.html
+++ b/spec/fixtures/views/Competitions_AccessesController_when_toggle_mail_info_toggles_registration_mail_info-index-without-mailinfo/view.html
@@ -113,7 +113,6 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
-<div class='alert alert-info'>Die Änderungen wurden gespeichert.</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
@@ -138,7 +137,7 @@ Erweitert
 <td>Alfred Meier</td>
 <td>alfred@meier.de</td>
 <td style='width: 60px; text-align: center' title='E-Mail-Information über neue Registrierungen'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/accesses/UUID/edit?registration_mail_info=false"><i class="far fa-square-check"></i></a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/accesses/UUID/edit?registration_mail_info=true"><i class="far fa-square"></i></a>
 </td>
 </tr>
 </table>
@@ -159,32 +158,6 @@ Erweitert
 <div class='alert alert-info'>Keine Einträge gefunden</div>
 
 </div>
-</div>
-</div>
-<div class='col-lg-8'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Zugangsanfragen</h4>
-</div>
-</div>
-<table class='table'>
-<tr>
-<th>Erstellt am</th>
-<th>E-Mail-Adresse</th>
-<th>Eigenen Zugang löschen</th>
-<th></th>
-</tr>
-<tr>
-<td>29.02.2024 00:17 Uhr</td>
-<td>foo@bar.de</td>
-<td>Ja</td>
-<td>
-<a class="btn btn-light btn-sm" data-turbo-confirm="Anfrage wirklich entfernen?" data-turbo-method="delete" href="/2024/mv-cup/access_requests/UUID"><i class='far fa-trash'></i>
-</a></td>
-</tr>
-</table>
-
 </div>
 </div>
 </div>
