--- a/app/views/competitions/accesses/index.html.haml
+++ b/app/views/competitions/accesses/index.html.haml
@@ -9,10 +9,16 @@
             %tr
               %th= User.human_attribute_name(:name)
               %th= User.human_attribute_name(:email)
+              %th= UserAccess.human_attribute_name(:registration_mail_info)
             - resource_collection.sort.each do |access|
               %tr
                 %td= access.user.name
                 %td= access.user.email
+                %td{ style: 'width: 60px; text-align: center', title: UserAccess.human_attribute_name(:registration_mail_info_full) }
+                  - if access.user == current_user
+                    = icon_link_btn("far #{access.registration_mail_info? ? 'fa-square-check' : 'fa-square'}", edit_competition_access_path(id: access.id, registration_mail_info: !access.registration_mail_info))
+                  - else
+                    .far{ class: access.registration_mail_info? ? 'fa-square-check' : 'fa-square' }
       - else
         - c.body do
           .alert.alert-info= t('a.no_entries_found')
