--- a/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-index-one-entry/view.html
+++ b/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-index-one-entry/view.html
@@ -131,10 +131,14 @@ Erweitert
 <tr>
 <th>Name</th>
 <th>E-Mail-Adresse</th>
+<th>Infomail</th>
 </tr>
 <tr>
 <td>Alfred Meier</td>
 <td>alfred@meier.de</td>
+<td style='width: 60px; text-align: center' title='E-Mail-Information über neue Registrierungen'>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/accesses/UUID/edit?registration_mail_info=false"><i class="far fa-square-check"></i></a>
+</td>
 </tr>
 </table>
 
