--- a/spec/fixtures/views/Competition_competition_creations_creates_competition-showing/view.html
+++ b/spec/fixtures/views/Competition_competition_creations_creates_competition-showing/view.html
@@ -153,6 +153,7 @@ Nächster Schritt
 
 <div class='card-header'>
 <div class='d-grid gap-2 col-10 mx-auto'>
+<a class="btn btn-light btn-sm" href="/2024/foo/information_requests/new">Anfrage stellen</a>
 <a class="btn btn-light btn-sm" href="/2024/foo/editing/edit">Bearbeiten</a>
 <a class="btn btn-light btn-sm" href="/2024/foo/visibility/edit">Sichtbarkeit bearbeiten</a>
 <a class="btn btn-light btn-sm" href="/2024/foo/registration/edit">Anmeldungen bearbeiten</a>
