--- a/spec/fixtures/views/competitions_visibilities_simple_access_login_logs_in_and_out-with-logout-link/view.html
+++ b/spec/fixtures/views/competitions_visibilities_simple_access_login_logs_in_and_out-with-logout-link/view.html
@@ -130,6 +130,7 @@ Nächster Schritt
 
 <div class='card-header'>
 <div class='d-grid gap-2 col-10 mx-auto'>
+<a class="btn btn-light btn-sm" href="/2024/mv-cup/information_requests/new">Anfrage stellen</a>
 <a class="btn btn-light btn-sm" href="/2024/mv-cup/editing/edit">Bearbeiten</a>
 <a class="btn btn-light btn-sm" href="/2024/mv-cup/visibility/edit">Sichtbarkeit bearbeiten</a>
 <a class="btn btn-light btn-sm" href="/2024/mv-cup/registration/edit">Anmeldungen bearbeiten</a>
